--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </ul>
                     <i onclick="close_sidebar()" id="close-sidebar" class="fa-solid fa-x"></i>
                     <div class="open-search1 not-display">
-                        <button disabled class="btn" >جستجو</button>
+                        <button disabled class="btn">جستجو</button>
                         <input class="open_search_input1" type="text" placeholder="نام محصول یا دسته ..."
                             maxlength="20">
                         <i onclick="close_search_bar()" id="close-search" class="fa-solid fa-x"></i>
@@ -68,7 +68,7 @@
 
     <div class="basket-box">
         <div class="basket-content">
-            
+
         </div>
     </div>
 
@@ -155,35 +155,46 @@
                 <h3>محصولات جدید</h3>
             </div>
             <div class="product-content">
+               <a href="#">
                 <div class="product-box">
-                    <img class="product-img" src="pic/p1.png">
+                    <img class="product-img" src="pic/p1.jpg">
+                    <img class="product-img2" src="pic/hover1.jpg">
                     <div class="product-text">
                         <p>تقویم دیواری ۱۴۰۱</p>
                         <span>۱۷۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
-                    <img class="product-img" src="pic/p2.png">
+                    <img class="product-img" src="pic/p2.jpg">
+                    <img class="product-img2" src="pic/hover2.jpg">
                     <div class="product-text">
                         <p>صندلی مدیریتی</p>
                         <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+              <a href="#">
                 <div class="product-box">
-                    <img class="product-img" src="pic/p3.png">
+                    <img class="product-img" src="pic/p3.jpg">
+                    <img class="product-img2" src="pic/hover3.jpg">
                     <div class="product-text">
                         <p>صندلی اداری</p>
                         <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+              </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/p4.png">
+                    <img class="product-img2" src="pic/hover4.jpg">
                     <div class="product-text">
                         <p>تقویم دیواری پک قهوه</p>
                         <span>۲۹۹٫۰۰۰ تومان</span>
                     </div>
                 </div>
-
+               </a>
             </div>
         </div>
     </section>
@@ -198,62 +209,86 @@
                 <h3>محصولات جانبی</h3>
             </div>
             <div class="product-content">
+              <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj1.png">
+                    <img class="product-img2" src="pic/hover5.jpg">
                     <div class="product-text">
                         <p> قلمدان </p>
                         <span>۳۲۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+              </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj2.png">
+                    <img class="product-img2" src="pic/hover6.jpg">
                     <div class="product-text">
                         <p>پک ۳ تایی ساعت، چراغ و قلمدان </p>
                         <span>۹۹۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj3.png">
+                    <img class="product-img2" src="pic/hover7.jpg">
                     <div class="product-text">
                         <p> چراغ رومیزی</p>
                         <span>۳۷۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj4.png">
+                    <img class="product-img2" src="pic/hover8.jpg">
                     <div class="product-text">
                         <p>ماگ سرامیکی </p>
                         <span>۱۲۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj6.png">
+                    <img class="product-img2" src="pic/hover10.jpg">
                     <div class="product-text">
                         <p>عینک محافظ چشم برای کامپیوتر </p>
                         <span>۵۹۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj7.png">
+                    <img class="product-img2" src="pic/hover12.jpg">
                     <div class="product-text">
                         <p> شمع مشکی (معطر) </p>
                         <span> ناموجود</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj8.png">
+                    <img class="product-img2" src="pic/hover11.jpg">
                     <div class="product-text">
                         <p> ساعت رومیزی </p>
                         <span>۴۱۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
+               <a href="#">
                 <div class="product-box">
                     <img class="product-img" src="pic/pj5.png">
+                    <img class="product-img2" src="pic/hover9.jpg">
                     <div class="product-text">
                         <p> قهوه ۱۰۰٪ (۲۵۰ گرمی) </p>
                         <span>۹۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
+               </a>
             </div>
         </div>
     </section>
@@ -324,6 +359,7 @@
             <div class="product-content">
                 <div class="product-box">
                     <img class="product-img" src="pic/e1.png">
+                    <img class="product-img2" src="pic/hover13.jpg">
                     <div class="product-text">
                         <p> موس بی‌سیم لاجیتک MX MASTER 3 </p>
                         <span>۳٫۹۵۰٫۰۰۰ تومان</span>
@@ -331,6 +367,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e2.png">
+                    <img class="product-img2" src="pic/hover14.jpg">
                     <div class="product-text">
                         <p> کیبورد بی‌سیم لاجیتک Craft Bluetooth </p>
                         <span>۶٫۱۵۰٫۰۰۰ تومان</span>
@@ -338,6 +375,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e3.png">
+                    <img class="product-img2" src="pic/hover15.jpg">
                     <div class="product-text">
                         <p> کیبورد بی‌سیم لاجیتک MX Keys </p>
                         <span>۳٫۸۵۰٫۰۰۰ تومان</span>
@@ -345,6 +383,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e4.png">
+                    <img class="product-img2" src="pic/hover16.jpg">
                     <div class="product-text">
                         <p>چراغ مطالعه هوشمند شیائومی</p>
                         <span>۱٫۲۵۰٫۰۰۰ تومان</span>
@@ -352,6 +391,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e5.png">
+                    <img class="product-img2" src="pic/hover17.jpg">
                     <div class="product-text">
                         <p>مانیتور ۲۷ اینچی شیائومی</p>
                         <span>۶٫۱۰۰٫۰۰۰ تومان</span>
@@ -359,6 +399,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e6.png">
+                    <img class="product-img2" src="pic/hover18.jpg">
                     <div class="product-text">
                         <p> مانیتور منحنی ۳۴ اینچی شیائومی </p>
                         <span> ۱۳٫۵۵۰٫۰۰۰ </span>
@@ -366,6 +407,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e7.png">
+                    <img class="product-img2" src="pic/hover19.jpg">
                     <div class="product-text">
                         <p> لایت بار شیائومی با ریموت کنترلر بی‌سیم </p>
                         <span>۱٫۶۵۰٫۰۰۰ تومان</span>
@@ -373,6 +415,7 @@
                 </div>
                 <div class="product-box">
                     <img class="product-img" src="pic/e8.png">
+                    <img class="product-img2" src="pic/hover20.jpg">
                     <div class="product-text">
                         <p> میکروفون RODE NT-USB Mini </p>
                         <span>۳٫۳۰۰٫۰۰۰ تومان</span>
@@ -508,6 +551,100 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+    <section id="socials">
+        <div style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                style="height: 100%; width: 100%;">
+                <path d="M-0.27,129.78 C275.11,146.55 395.87,90.30 503.10,124.84 L500.27,151.48 L0.00,150.00 Z"
+                    style="stroke: none; fill: rgb(246, 246, 246);;"></path>
+            </svg></div>
+        <div class="socials">
+            <div class="socials-titel">
+                <a href="#">مارا در اینستاگرام دنبال کنید</a>
+            </div>
+            <div class="socials-content">
+                <div class="socials-content-images">
+                    <div class="social-image">
+                        <img src="pic/social1.jpg" alt="">
+                    </div>
+                    <div class="social-image">
+                        <img src="pic/social2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="socials-content-images">
+                    <div class="social-image">
+                        <img src="pic/social3.jpg" alt="">
+                    </div>
+                    <div class="social-image">
+                        <img src="pic/social4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="socials-content-images img1">
+                    <div class="social-image image-1">
+                        <img src="pic/social5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="socials-content-images">
+                    <div class="social-image">
+                        <img src="pic/social6.jpg" alt="">
+                    </div>
+                    <div class="social-image">
+                        <img src="pic/social7.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section id="fotter">
+        <div class="fotter">
+            <div class="fotter-nav">
+                <ul>
+                    <li><a href="#">صفحه اصلی</a></li>
+                    <li><a href="#">محصولات</a></li>
+                    <li><a href="#">خدمات</a></li>
+                    <li><a href="#">درباره</a></li>
+                    <li><a href="#">طراحی</a></li>
+                    <li><a href="#">مشارکت</a></li>
+                    <li><a href="#">تماس با ما</a></li>
+                </ul>
+            </div>
+            <div class="fotter-end">
+                <div class="fotter-socials">
+                    <div class="fotter-socials-icon">
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
+                    
+                    <div class="fotter-socials-number">
+                        <a href="#">
+                            <i class="fas fa-phone"></i>
+                            09132969940
+                           </a>
+                    </div>
+
+                </div>
+                <div class="fotter-copy">
+                    <span>© <!-- -->۱۴۰۱<!-- --> -<!-- --> <!-- -->کلیه حقوق این فروشگاه محفوظ است</span>
+                    <span class="not-display">|</span>
+                    <span>فروشگاه ساخته شده توسط <a href="#">Aminmenestin</a></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
