--- a/index.html
+++ b/index.html
@@ -155,46 +155,54 @@
                 <h3>محصولات جدید</h3>
             </div>
             <div class="product-content">
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/p1.jpg">
-                    <img class="product-img2" src="pic/hover1.jpg">
-                    <div class="product-text">
-                        <p>تقویم دیواری ۱۴۰۱</p>
-                        <span>۱۷۰٫۰۰۰ تومان</span>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/p1.jpg">
+                            <img class="product-img2" src="pic/hover1.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>تقویم دیواری ۱۴۰۱</p>
+                            <span>۱۷۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/p2.jpg">
-                    <img class="product-img2" src="pic/hover2.jpg">
-                    <div class="product-text">
-                        <p>صندلی مدیریتی</p>
-                        <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/p2.jpg">
+                            <img class="product-img2" src="pic/hover2.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>صندلی مدیریتی</p>
+                            <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-              <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/p3.jpg">
-                    <img class="product-img2" src="pic/hover3.jpg">
-                    <div class="product-text">
-                        <p>صندلی اداری</p>
-                        <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/p3.jpg">
+                            <img class="product-img2" src="pic/hover3.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>صندلی اداری</p>
+                            <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-              </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/p4.png">
-                    <img class="product-img2" src="pic/hover4.jpg">
-                    <div class="product-text">
-                        <p>تقویم دیواری پک قهوه</p>
-                        <span>۲۹۹٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/p4.png">
+                            <img class="product-img2" src="pic/hover4.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>تقویم دیواری پک قهوه</p>
+                            <span>۲۹۹٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
+                </a>
             </div>
         </div>
     </section>
@@ -209,86 +217,102 @@
                 <h3>محصولات جانبی</h3>
             </div>
             <div class="product-content">
-              <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj1.png">
-                    <img class="product-img2" src="pic/hover5.jpg">
-                    <div class="product-text">
-                        <p> قلمدان </p>
-                        <span>۳۲۰٫۰۰۰ تومان</span>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj1.png">
+                            <img class="product-img2" src="pic/hover5.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p> قلمدان </p>
+                            <span>۳۲۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-              </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj2.png">
-                    <img class="product-img2" src="pic/hover6.jpg">
-                    <div class="product-text">
-                        <p>پک ۳ تایی ساعت، چراغ و قلمدان </p>
-                        <span>۹۹۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj2.png">
+                            <img class="product-img2" src="pic/hover6.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>پک ۳ تایی ساعت، چراغ و قلمدان </p>
+                            <span>۹۹۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj3.png">
-                    <img class="product-img2" src="pic/hover7.jpg">
-                    <div class="product-text">
-                        <p> چراغ رومیزی</p>
-                        <span>۳۷۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj3.png">
+                            <img class="product-img2" src="pic/hover7.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p> چراغ رومیزی</p>
+                            <span>۳۷۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj4.png">
-                    <img class="product-img2" src="pic/hover8.jpg">
-                    <div class="product-text">
-                        <p>ماگ سرامیکی </p>
-                        <span>۱۲۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj4.png">
+                            <img class="product-img2" src="pic/hover8.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>ماگ سرامیکی </p>
+                            <span>۱۲۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj6.png">
-                    <img class="product-img2" src="pic/hover10.jpg">
-                    <div class="product-text">
-                        <p>عینک محافظ چشم برای کامپیوتر </p>
-                        <span>۵۹۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj6.png">
+                            <img class="product-img2" src="pic/hover10.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p>عینک محافظ چشم برای کامپیوتر </p>
+                            <span>۵۹۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj7.png">
-                    <img class="product-img2" src="pic/hover12.jpg">
-                    <div class="product-text">
-                        <p> شمع مشکی (معطر) </p>
-                        <span> ناموجود</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj7.png">
+                            <img class="product-img2" src="pic/hover12.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p> شمع مشکی (معطر) </p>
+                            <span> ناموجود</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj8.png">
-                    <img class="product-img2" src="pic/hover11.jpg">
-                    <div class="product-text">
-                        <p> ساعت رومیزی </p>
-                        <span>۴۱۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj8.png">
+                            <img class="product-img2" src="pic/hover11.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p> ساعت رومیزی </p>
+                            <span>۴۱۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
-               <a href="#">
-                <div class="product-box">
-                    <img class="product-img" src="pic/pj5.png">
-                    <img class="product-img2" src="pic/hover9.jpg">
-                    <div class="product-text">
-                        <p> قهوه ۱۰۰٪ (۲۵۰ گرمی) </p>
-                        <span>۹۰٫۰۰۰ تومان</span>
+                </a>
+                <a href="#">
+                    <div class="product-box">
+                        <div class="all-images">
+                            <img class="product-img" src="pic/pj5.png">
+                            <img class="product-img2" src="pic/hover9.jpg">
+                        </div>
+                        <div class="product-text">
+                            <p> قهوه ۱۰۰٪ (۲۵۰ گرمی) </p>
+                            <span>۹۰٫۰۰۰ تومان</span>
+                        </div>
                     </div>
-                </div>
-               </a>
+                </a>
             </div>
         </div>
     </section>
@@ -358,64 +382,80 @@
             </div>
             <div class="product-content">
                 <div class="product-box">
-                    <img class="product-img" src="pic/e1.png">
-                    <img class="product-img2" src="pic/hover13.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e1.png">
+                        <img class="product-img2" src="pic/hover13.jpg">
+                    </div>
                     <div class="product-text">
                         <p> موس بی‌سیم لاجیتک MX MASTER 3 </p>
                         <span>۳٫۹۵۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e2.png">
-                    <img class="product-img2" src="pic/hover14.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e2.png">
+                        <img class="product-img2" src="pic/hover14.jpg">
+                    </div>
                     <div class="product-text">
                         <p> کیبورد بی‌سیم لاجیتک Craft Bluetooth </p>
                         <span>۶٫۱۵۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e3.png">
-                    <img class="product-img2" src="pic/hover15.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e3.png">
+                        <img class="product-img2" src="pic/hover15.jpg">
+                    </div>
                     <div class="product-text">
                         <p> کیبورد بی‌سیم لاجیتک MX Keys </p>
                         <span>۳٫۸۵۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e4.png">
-                    <img class="product-img2" src="pic/hover16.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e4.png">
+                        <img class="product-img2" src="pic/hover16.jpg">
+                    </div>
                     <div class="product-text">
                         <p>چراغ مطالعه هوشمند شیائومی</p>
                         <span>۱٫۲۵۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e5.png">
-                    <img class="product-img2" src="pic/hover17.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e5.png">
+                        <img class="product-img2" src="pic/hover17.jpg">
+                    </div>
                     <div class="product-text">
                         <p>مانیتور ۲۷ اینچی شیائومی</p>
                         <span>۶٫۱۰۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e6.png">
-                    <img class="product-img2" src="pic/hover18.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e6.png">
+                        <img class="product-img2" src="pic/hover18.jpg">
+                    </div>
                     <div class="product-text">
                         <p> مانیتور منحنی ۳۴ اینچی شیائومی </p>
                         <span> ۱۳٫۵۵۰٫۰۰۰ </span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e7.png">
-                    <img class="product-img2" src="pic/hover19.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e7.png">
+                        <img class="product-img2" src="pic/hover19.jpg">
+                    </div>
                     <div class="product-text">
                         <p> لایت بار شیائومی با ریموت کنترلر بی‌سیم </p>
                         <span>۱٫۶۵۰٫۰۰۰ تومان</span>
                     </div>
                 </div>
                 <div class="product-box">
-                    <img class="product-img" src="pic/e8.png">
-                    <img class="product-img2" src="pic/hover20.jpg">
+                    <div class="all-images">
+                        <img class="product-img" src="pic/e8.png">
+                        <img class="product-img2" src="pic/hover20.jpg">
+                    </div>
                     <div class="product-text">
                         <p> میکروفون RODE NT-USB Mini </p>
                         <span>۳٫۳۰۰٫۰۰۰ تومان</span>
@@ -627,17 +667,21 @@
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
-                    
+
                     <div class="fotter-socials-number">
                         <a href="#">
                             <i class="fas fa-phone"></i>
                             09132969940
-                           </a>
+                        </a>
                     </div>
 
                 </div>
                 <div class="fotter-copy">
-                    <span>© <!-- -->۱۴۰۱<!-- --> -<!-- --> <!-- -->کلیه حقوق این فروشگاه محفوظ است</span>
+                    <span>©
+                        <!-- -->۱۴۰۱
+                        <!-- --> -
+                        <!-- -->
+                        <!-- -->کلیه حقوق این فروشگاه محفوظ است</span>
                     <span class="not-display">|</span>
                     <span>فروشگاه ساخته شده توسط <a href="#">Aminmenestin</a></span>
                 </div>
