--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
     <!-- header -->
 
-
-
     <section>
         <header>
             <i onclick="open_sidebar()" id="open-sidebar" class="fas fa-bars"></i>
@@ -81,7 +79,7 @@
             <div class="slideshow-container">
 
                 <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
+                <div class="mySlides fade active">
                     <img src="pic/slider1.jpg" style="width:100%" alt="sliderimg">
                 </div>
 
@@ -105,25 +103,31 @@
                 </div>
 
 
-
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(-1)">&#10095;</a>
+                <a class="next">&#10094;</a>
+                <a class="prev" >&#10095;</a>
             </div>
             <br>
+            
 
-            <!--Under slider -->
-            <div dir="ltr" class="under-slider" style="text-align:center">
-                <img src="pic/11.jpg" class="dot" onclick="currentSlide(1)"></img>
-                <img src="pic/22.jpg" class="dot" onclick="currentSlide(2)"></img>
-                <img src="pic/33.jpg" class="dot" onclick="currentSlide(3)"></img>
-                <img src="pic/44.jpg" class="dot" onclick="currentSlide(4)"></img>
-                <img src="pic/55.jpg" class="dot" onclick="currentSlide(5)"></img>
-                <img src="pic/slider6.jpg" class="dot" onclick="currentSlide(6)"></img>
+            <div class="progress">
 
             </div>
+
         </div>
     </section>
+
+
+     <!--Under slider -->
+        
+     <div dir="ltr" class="under-slider" style="text-align:center">
+        <img src="pic/11.jpg" class="dot active" onclick="currentSlide(0)"></img>
+        <img src="pic/22.jpg" class="dot" onclick="currentSlide(1)"></img>
+        <img src="pic/33.jpg" class="dot" onclick="currentSlide(2)"></img>
+        <img src="pic/44.jpg" class="dot" onclick="currentSlide(3)"></img>
+        <img src="pic/55.jpg" class="dot" onclick="currentSlide(4)"></img>
+        <img src="pic/slider6.jpg" class="dot" onclick="currentSlide(5)"></img>
+
+    </div>
 
 
     <!-- intro-text -->
@@ -165,6 +169,7 @@
                             <p>تقویم دیواری ۱۴۰۱</p>
                             <span>۱۷۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -177,6 +182,7 @@
                             <p>صندلی مدیریتی</p>
                             <span>۲۱٫۰۰۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -189,6 +195,7 @@
                             <p>صندلی اداری</p>
                             <span>۱۸٫۵۰۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -201,6 +208,7 @@
                             <p>تقویم دیواری پک قهوه</p>
                             <span>۲۹۹٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
             </div>
@@ -227,6 +235,7 @@
                             <p> قلمدان </p>
                             <span>۳۲۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -239,6 +248,7 @@
                             <p>پک ۳ تایی ساعت، چراغ و قلمدان </p>
                             <span>۹۹۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -251,6 +261,7 @@
                             <p> چراغ رومیزی</p>
                             <span>۳۷۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -263,6 +274,7 @@
                             <p>ماگ سرامیکی </p>
                             <span>۱۲۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -275,6 +287,7 @@
                             <p>عینک محافظ چشم برای کامپیوتر </p>
                             <span>۵۹۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -287,6 +300,7 @@
                             <p> شمع مشکی (معطر) </p>
                             <span> ناموجود</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -299,6 +313,7 @@
                             <p> ساعت رومیزی </p>
                             <span>۴۱۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
                 <a href="#">
@@ -311,6 +326,7 @@
                             <p> قهوه ۱۰۰٪ (۲۵۰ گرمی) </p>
                             <span>۹۰٫۰۰۰ تومان</span>
                         </div>
+                        <div class="add_shop">+</div>
                     </div>
                 </a>
             </div>
@@ -390,6 +406,7 @@
                         <p> موس بی‌سیم لاجیتک MX MASTER 3 </p>
                         <span>۳٫۹۵۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -400,6 +417,7 @@
                         <p> کیبورد بی‌سیم لاجیتک Craft Bluetooth </p>
                         <span>۶٫۱۵۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -410,6 +428,7 @@
                         <p> کیبورد بی‌سیم لاجیتک MX Keys </p>
                         <span>۳٫۸۵۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -420,6 +439,7 @@
                         <p>چراغ مطالعه هوشمند شیائومی</p>
                         <span>۱٫۲۵۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -430,6 +450,7 @@
                         <p>مانیتور ۲۷ اینچی شیائومی</p>
                         <span>۶٫۱۰۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -440,6 +461,7 @@
                         <p> مانیتور منحنی ۳۴ اینچی شیائومی </p>
                         <span> ۱۳٫۵۵۰٫۰۰۰ </span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -450,6 +472,7 @@
                         <p> لایت بار شیائومی با ریموت کنترلر بی‌سیم </p>
                         <span>۱٫۶۵۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
                 <div class="product-box">
                     <div class="all-images">
@@ -460,6 +483,7 @@
                         <p> میکروفون RODE NT-USB Mini </p>
                         <span>۳٫۳۰۰٫۰۰۰ تومان</span>
                     </div>
+                    <div class="add_shop">+</div>
                 </div>
             </div>
         </div>
